Update version to 1.7.11, adding multi-language support for German, Dutch, and French. Update CHANGELOG.md to reflect new language additions and enhancements in the translation files.

--- a/locales/de.json
+++ b/locales/de.json
@@ -250,5 +250,121 @@
         "domains_excluded": "Ausgeschlossene Domains: {domains}",
         "failed_to_create_account": "Konto Erstellen Fehlgeschlagen",
         "account_creation_error": "Konto-Erstellungsfehler: {error}"
+    },
+    "update": {
+        "title": "Cursor Auto-Update Deaktivieren",
+        "disable_success": "Auto-Update Deaktiviert Erfolgreich",
+        "disable_failed": "Auto-Update Deaktivieren Fehlgeschlagen: {error}",
+        "press_enter": "Drücken Sie Enter zum Fortfahren",
+        "start_disable": "Auto-Update Deaktivieren Starten",
+        "killing_processes": "Prozesse Töten",
+        "processes_killed": "Prozesse Getötet",
+        "removing_directory": "Verzeichnis Entfernen",
+        "directory_removed": "Verzeichnis Entfernt",
+        "creating_block_file": "Block-Datei Erstellen",
+        "block_file_created": "Block-Datei Erstellt"
+    },
+    "updater": {
+        "checking": "Updates prüfen...",
+        "new_version_available": "Neue Version verfügbar! (Aktuell: {current}, Neueste: {latest})",
+        "updating": "Zur neuesten Version aktualisieren. Das Programm wird automatisch neu starten.",
+        "up_to_date": "Sie verwenden die neueste Version.",
+        "check_failed": "Überprüfung auf Updates fehlgeschlagen: {error}",
+        "continue_anyway": "Mit der aktuellen Version fortfahren...",
+        "update_confirm": "Möchten Sie die neueste Version aktualisieren? (Y/n)",
+        "update_skipped": "Update überspringen.",
+        "invalid_choice": "Ungültige Auswahl. Bitte geben Sie 'Y' oder 'n' ein.",
+        "development_version": "Entwickler-Version {current} > {latest}"
+    },
+    "totally_reset": {
+        "title": "Cursor Vollständig Zurücksetzen",
+        "checking_config": "Konfigurationsdatei Überprüfen",
+        "config_not_found": "Konfigurationsdatei Nicht Gefunden",
+        "no_permission": "Kann Konfigurationsdatei Nicht Lesen oder Schreiben, Bitte Berechtigungen Überprüfen",
+        "reading_config": "Aktuelle Konfiguration Lesen",
+        "creating_backup": "Konfigurationsdatei Sichern",
+        "backup_exists": "Backup-Datei bereits vorhanden, Sicherungsschritt überspringen",
+        "generating_new_machine_id": "Neue Maschinen-ID Generieren",
+        "saving_new_config": "Neue Konfiguration in JSON Speichern",
+        "success": "Cursor Erfolgreich Zurückgesetzt",
+        "error": "Cursor Zurücksetzen Fehlgeschlagen: {error}",
+        "press_enter": "Drücken Sie Enter zum Beenden",
+        "reset_machine_id": "Maschinen-ID Zurücksetzen",
+        "database_connection_closed": "Datenbankverbindung Geschlossen",
+        "database_updated_successfully": "Datenbank Erfolgreich Aktualisiert",
+        "connected_to_database": "Mit Datenbank Verbunden",
+        "updating_pair": "Schlüssel-Wert-Paar Aktualisieren",
+        "db_not_found": "Datenbankdatei Nicht Gefunden bei: {path}",
+        "db_permission_error": "Kann Nicht auf Datenbankdatei Zugreifen. Bitte Berechtigungen Überprüfen",
+        "db_connection_error": "Verbindung zur Datenbank Fehlgeschlagen: {error}",
+        "feature_title": "FEATURES",
+        "feature_1": "Vollständige Entfernung von Cursor AI Einstellungen und Konfigurationen",
+        "feature_2": "Entfernt alle zwischengespeicherten Daten, einschließlich AI-Verlauf und Prompts",
+        "feature_3": "Maschinen-ID Zurücksetzen, um Trial-Erkennung zu umgehen",
+        "feature_4": "Erstellt neue zufällige Maschinen-IDs",
+        "feature_5": "Entfernt benutzerdefinierte Erweiterungen und Einstellungen",
+        "feature_6": "Zurücksetzt Trial-Informationen und Aktivierungsdaten",
+        "feature_7": "Tiefes Scannen für versteckte Lizenz- und Trial-bezogene Dateien",
+        "feature_8": "Sichert nicht-Cursor-Dateien und Anwendungen",
+        "feature_9": "Kompatibel mit Windows, macOS und Linux",
+        "disclaimer_title": "Disclaimer",
+        "disclaimer_1": "Dieses Tool wird alle Cursor AI Einstellungen,",
+        "disclaimer_2": "Konfigurationen und zwischengespeicherte Daten löschen. Diese Aktion kann nicht rückgängig gemacht werden.",
+        "disclaimer_3": "Ihre Code-Dateien werden NICHT beeinflusst, und das Tool ist so konzipiert,",
+        "disclaimer_4": "nur Cursor AI Editor-Dateien und Trial-Erkennungsmechanismen zu zielen.",
+        "disclaimer_5": "Andere Anwendungen auf Ihrem System werden NICHT beeinflusst.",
+        "disclaimer_6": "Sie müssen Cursor AI erneut einrichten, nachdem Sie dieses Tool ausgeführt haben.",
+        "disclaimer_7": "Verwenden Sie auf eigene Gefahr",
+        "confirm_title": "Sind Sie sicher, dass Sie fortfahren möchten?",
+        "confirm_1": "Diese Aktion wird alle Cursor AI Einstellungen,",
+        "confirm_2": "Konfigurationen und zwischengespeicherte Daten löschen. Diese Aktion kann nicht rückgängig gemacht werden.",
+        "confirm_3": "Ihre Code-Dateien werden NICHT beeinflusst, und das Tool ist so konzipiert,",
+        "confirm_4": "nur Cursor AI Editor-Dateien und Trial-Erkennungsmechanismen zu zielen.",
+        "confirm_5": "Andere Anwendungen auf Ihrem System werden NICHT beeinflusst.",
+        "confirm_6": "Sie müssen Cursor AI erneut einrichten, nachdem Sie dieses Tool ausgeführt haben.",
+        "confirm_7": "Verwenden Sie auf eigene Gefahr",
+        "invalid_choice": "Bitte geben Sie 'Y' oder 'n' ein",
+        "skipped_for_safety": "Übersprungen für Sicherheit (nicht Cursor-bezogen): {path}",
+        "deleted": "Gelöscht: {path}",
+        "error_deleting": "Fehler beim Löschen von {path}: {error}",
+        "not_found": "Datei nicht gefunden: {path}",
+        "resetting_machine_id": "Maschinen-IDs zurücksetzen, um Trial-Erkennung zu umgehen...",
+        "created_machine_id": "Neue Maschinen-ID erstellt: {path}",
+        "error_creating_machine_id": "Fehler beim Erstellen der Maschinen-ID-Datei {path}: {error}",
+        "error_searching": "Fehler beim Suchen nach Dateien in {path}: {error}",
+        "created_extended_trial_info": "Neue erweiterte Trial-Informationen erstellt: {path}",
+        "error_creating_trial_info": "Fehler beim Erstellen der Trial-Informationen-Datei {path}: {error}",
+        "resetting_cursor_ai_editor": "Cursor AI Editor zurücksetzen... Bitte warten.",
+        "reset_cancelled": "Reset abgebrochen. Ohne Änderungen verlassen.",
+        "windows_machine_id_modification_skipped": "Windows Maschinen-ID-Änderung übersprungen: {error}",
+        "linux_machine_id_modification_skipped": "Linux machine-id-Änderung übersprungen: {error}",
+        "note_complete_machine_id_reset_may_require_running_as_administrator": "Hinweis: Vollständiges Zurücksetzen der Maschinen-ID kann erfordern, dass Sie als Administrator ausführen",
+        "note_complete_system_machine_id_reset_may_require_sudo_privileges": "Hinweis: Vollständiges System-Maschinen-ID-Zurücksetzen kann sudo-Berechtigungen erfordern",
+        "windows_registry_instructions": "📝 HINWEIS: Für vollständiges Zurücksetzen auf Windows müssen Sie möglicherweise auch die Registrierungseinträge bereinigen.",
+        "windows_registry_instructions_2": "   Führen Sie 'regedit' aus und suchen Sie nach Schlüsseln, die 'Cursor' oder 'CursorAI' enthalten, unter HKEY_CURRENT_USER\\Software\\ und löschen Sie sie.\n",
+        "reset_log_1": "Cursor AI wurde vollständig zurückgesetzt und Trial-Erkennung umgangen!",
+        "reset_log_2": "Bitte starten Sie Ihr System neu, um die Änderungen zu übernehmen.",
+        "reset_log_3": "Sie müssen Cursor AI erneut installieren und sollten jetzt einen neuen Trial-Zeitraum haben.",
+        "reset_log_4": "Für die besten Ergebnisse betrachten Sie auch:",
+        "reset_log_5": "Verwenden Sie eine andere E-Mail-Adresse beim Registrieren für einen neuen Trial",
+        "reset_log_6": "Wenn verfügbar, verwenden Sie einen VPN, um Ihre IP-Adresse zu ändern",
+        "reset_log_7": "Löschen Sie Ihre Browser-Cookies und Cache vor dem Besuch der Cursor AI-Website",
+        "reset_log_8": "Wenn Probleme bestehen, versuchen Sie, Cursor AI in einem anderen Speicherort zu installieren",
+        "reset_log_9": "Wenn Sie irgendwelche Probleme haben, gehen Sie zu Github Issue Tracker und erstellen Sie ein Problem unter https://github.com/yeongpin/cursor-free-vip/issues",
+        "unexpected_error": "Ein unerwarteter Fehler ist aufgetreten: {error}",
+        "report_issue": "Bitte melden Sie dieses Problem bei Github Issue Tracker unter https://github.com/yeongpin/cursor-free-vip/issues",
+        "keyboard_interrupt": "Prozess von Benutzer unterbrochen. Beenden...",
+        "return_to_main_menu": "Zurück zur Hauptseite...",
+        "process_interrupted": "Prozess unterbrochen. Beenden...",
+        "press_enter_to_return_to_main_menu": "Drücken Sie Enter, um zur Hauptseite zurückzukehren...",
+        "removing_known": "Bekannte Trial/Lizenz-Dateien entfernen",
+        "performing_deep_scan": "Tiefes Scannen nach zusätzlichen Trial/Lizenz-Dateien",
+        "found_additional_potential_license_trial_files": "Gefundene {count} zusätzliche potentielle Lizenz/Trial-Dateien",
+        "checking_for_electron_localstorage_files": "Überprüfen auf Electron localStorage-Dateien",
+        "no_additional_license_trial_files_found_in_deep_scan": "Keine zusätzlichen Lizenz/Trial-Dateien in tiefem Scan gefunden",
+        "removing_electron_localstorage_files": "Electron localStorage-Dateien entfernen",
+        "electron_localstorage_files_removed": "Electron localStorage-Dateien entfernt",
+        "electron_localstorage_files_removal_error": "Fehler beim Entfernen von Electron localStorage-Dateien: {error}",
+        "removing_electron_localstorage_files_completed": "Entfernen von Electron localStorage-Dateien abgeschlossen"
     }
-} 
+}
