--- a/locales/fr.json
+++ b/locales/fr.json
@@ -250,5 +250,121 @@
         "domains_excluded": "Domaines Exclus : {domains}",
         "failed_to_create_account": "Échec de la Création du Compte",
         "account_creation_error": "Erreur de Création du Compte : {error}"
+    },
+    "update": {
+        "title": "Désactivation de la Mise à Jour Automatique de Cursor",
+        "disable_success": "Mise à Jour Automatique Désactivée avec Succès",
+        "disable_failed": "Échec de la Désactivation de la Mise à Jour Automatique : {error}",
+        "press_enter": "Appuyez sur Entrée pour Continuer",
+        "start_disable": "Démarrage de la Désactivation de la Mise à Jour Automatique",
+        "killing_processes": "Tuer les Processus",
+        "processes_killed": "Processus Tuer",
+        "removing_directory": "Suppression du Dossier",
+        "directory_removed": "Dossier Supprimé",
+        "creating_block_file": "Création du Fichier de Blocage",
+        "block_file_created": "Fichier de Blocage Créé"
+    },
+    "updater": {
+        "checking": "Vérification des mises à jour...",
+        "new_version_available": "Nouvelle version disponible! (Version actuelle: {current}, Version la plus récente: {latest})",
+        "updating": "Mise à jour vers la version la plus récente. Le programme redémarrera automatiquement.",
+        "up_to_date": "Vous utilisez la version la plus récente.",
+        "check_failed": "Échec de la vérification des mises à jour: {error}",
+        "continue_anyway": "Continuer avec la version actuelle...",
+        "update_confirm": "Voulez-vous mettre à jour vers la version la plus récente? (O/n)",
+        "update_skipped": "Mise à jour ignorée.",
+        "invalid_choice": "Choix invalide. Veuillez entrer 'O' ou 'n'.",
+        "development_version": "Version de Développement {current} > {latest}"
+    },
+    "totally_reset": {
+        "title": "Réinitialiser Complètement Cursor",
+        "checking_config": "Vérification du Fichier de Configuration",
+        "config_not_found": "Fichier de Configuration Non Trouvé",
+        "no_permission": "Impossible de Lire ou d'Écrire le Fichier de Configuration, Veuillez Vérifier les Permissions du Fichier",
+        "reading_config": "Lecture de la Configuration Actuelle",
+        "creating_backup": "Création de la Sauvegarde de la Configuration",
+        "backup_exists": "Fichier de Sauvegarde Déjà Existant, Passer à la Sauvegarde",
+        "generating_new_machine_id": "Génération d'un Nouvel ID Machine",
+        "saving_new_config": "Enregistrement de la Nouvelle Configuration dans JSON",
+        "success": "Réinitialisation de Cursor Réussie",
+        "error": "Réinitialisation de Cursor Échouée: {error}",
+        "press_enter": "Appuyez sur Entrée pour Continuer",
+        "reset_machine_id": "Réinitialiser l'ID Machine",
+        "database_connection_closed": "Connexion à la Base de Données Fermée",
+        "database_updated_successfully": "Base de Données Mise à Jour avec Succès",
+        "connected_to_database": "Connecté à la Base de Données",
+        "updating_pair": "Updating Key-Value Pair",
+        "db_not_found": "Database file not found at: {path}",
+        "db_permission_error": "Impossible d'Accéder au Fichier de Base de Données. Veuillez Vérifier les Permissions",
+        "db_connection_error": "Échec de la Connexion à la Base de Données : {error}",
+        "feature_title": "Fonctionnalités",
+        "feature_1": "Suppression complète des paramètres et configurations de Cursor AI",
+        "feature_2": "Efface tous les données mises en cache, y compris l'historique et les prompts",
+        "feature_3": "Réinitialise l'ID Machine pour contourner la détection de la période d'essai",
+        "feature_4": "Crée de nouveaux identifiants de machine aléatoires",
+        "feature_5": "Supprime les extensions personnalisées et les préférences",
+        "feature_6": "Réinitialise les informations de la période d'essai et les données d'activation",
+        "feature_7": "Analyse approfondie pour les fichiers cachés liés à la licence et à la période d'essai",
+        "feature_8": "Sauvegarde sécurisée des fichiers non liés à Cursor et applications",
+        "feature_9": "Compatible avec Windows, macOS et Linux",
+        "disclaimer_title": "DISCLAIMER",
+        "disclaimer_1": "Cet outil supprimera définitivement tous les paramètres et configurations de Cursor AI,",
+        "disclaimer_2": "configurations, et les données mises en cache. Cette action ne peut pas être annulée.",
+        "disclaimer_3": "Vos fichiers de code ne seront PAS affectés, et l'outil est conçu",
+        "disclaimer_4": "pour ne cibler que les fichiers de l'éditeur Cursor AI et les mécanismes de détection de la période d'essai.",
+        "disclaimer_5": "Les autres applications sur votre système ne seront PAS affectées.",
+        "disclaimer_6": "Vous devrez régler Cursor AI à nouveau après avoir exécuté cet outil.",
+        "disclaimer_7": "Utilisez à vos risques et périls",
+        "confirm_title": "Êtes-vous sûr de vouloir continuer?",
+        "confirm_1": "Cette action supprimera tous les paramètres et configurations de Cursor AI,",
+        "confirm_2": "configurations, et les données mises en cache. Cette action ne peut pas être annulée.",
+        "confirm_3": "Vos fichiers de code ne seront PAS affectés, et l'outil est conçu",
+        "confirm_4": "pour ne cibler que les fichiers de l'éditeur Cursor AI et les mécanismes de détection de la période d'essai.",
+        "confirm_5": "Les autres applications sur votre système ne seront PAS affectées.",
+        "confirm_6": "Vous devrez régler Cursor AI à nouveau après avoir exécuté cet outil.",
+        "confirm_7": "Utilisez à vos risques et périls",
+        "invalid_choice": "Veuillez entrer 'O' ou 'n'",
+        "skipped_for_safety": "Passé pour la sécurité (non lié à Cursor): {path}",
+        "deleted": "Supprimé: {path}",
+        "error_deleting": "Erreur de suppression de {path}: {error}",
+        "not_found": "Fichier non trouvé: {path}",
+        "resetting_machine_id": "Réinitialisation des identifiants de machine pour contourner la détection de la période d'essai...",
+        "created_machine_id": "Créé un nouvel ID machine: {path}",
+        "error_creating_machine_id": "Erreur de création du fichier ID machine {path}: {error}",
+        "error_searching": "Erreur de recherche dans {path}: {error}",
+        "created_extended_trial_info": "Créé un nouveau fichier d'informations de période d'essai étendue: {path}",
+        "error_creating_trial_info": "Erreur de création du fichier d'informations de période d'essai: {path}: {error}",
+        "resetting_cursor_ai_editor": "Réinitialisation de l'éditeur Cursor AI... Veuillez patienter.",
+        "reset_cancelled": "Réinitialisation annulée. Exiting sans faire de modifications.",
+        "windows_machine_id_modification_skipped": "Modification de l'ID machine Windows ignorée: {error}",
+        "linux_machine_id_modification_skipped": "Modification de l'ID machine Linux ignorée: {error}",
+        "note_complete_machine_id_reset_may_require_running_as_administrator": "Note: Réinitialisation complète de l'ID machine peut nécessiter d'exécuter en tant qu'administrateur",
+        "note_complete_system_machine_id_reset_may_require_sudo_privileges": "Note: Réinitialisation complète de l'ID machine peut nécessiter des privilèges sudo",
+        "windows_registry_instructions": "📝 NOTE: Pour la réinitialisation complète sur Windows, vous devrez peut-être également nettoyer les entrées du registre.",
+        "windows_registry_instructions_2": "   Exécutez 'regedit' et recherchez les clés contenant 'Cursor' ou 'CursorAI' sous HKEY_CURRENT_USER\\Software\\ et supprimez-les.\n",
+        "reset_log_1": "Cursor AI a été complètement réinitialisé et la détection de la période d'essai a été contournée!",
+        "reset_log_2": "Veuillez redémarrer votre système pour que les modifications prennent effet.",
+        "reset_log_3": "Vous devrez réinstaller Cursor AI et devriez maintenant avoir une période d'essai fraîche.",
+        "reset_log_4": "Pour les meilleurs résultats, considérez également:",
+        "reset_log_5": "Utilisez une autre adresse e-mail lors de l'inscription pour une nouvelle période d'essai",
+        "reset_log_6": "Si disponible, utilisez un VPN pour changer votre adresse IP",
+        "reset_log_7": "Nettoyez les cookies et le cache de votre navigateur avant de visiter le site web de Cursor AI",
+        "reset_log_8": "Si les problèmes persistent, essayez d'installer Cursor AI dans un autre emplacement",
+        "reset_log_9": "Si vous rencontrez des problèmes, allez au suivi des problèmes Github et créez un problème à https://github.com/yeongpin/cursor-free-vip/issues",
+        "unexpected_error": "Une erreur inattendue est survenue: {error}",
+        "report_issue": "Veuillez signaler ce problème au suivi des problèmes Github à https://github.com/yeongpin/cursor-free-vip/issues",
+        "keyboard_interrupt": "Processus interrompu par l'utilisateur. Exiting...",
+        "return_to_main_menu": "Retour au menu principal...",
+        "process_interrupted": "Processus interrompu. Exiting...",
+        "press_enter_to_return_to_main_menu": "Appuyez sur Entrée pour retourner au menu principal...",
+        "removing_known": "Suppression des fichiers de période d'essai/licence connus",
+        "performing_deep_scan": "Exécution d'une analyse approfondie pour les fichiers de période d'essai/licence supplémentaires",
+        "found_additional_potential_license_trial_files": "Trouvé {count} fichiers de période d'essai/licence supplémentaires potentiels",
+        "checking_for_electron_localstorage_files": "Vérification des fichiers localStorage Electron",
+        "no_additional_license_trial_files_found_in_deep_scan": "Aucun fichier de licence/période d'essai supplémentaire trouvé dans l'analyse approfondie",
+        "removing_electron_localstorage_files": "Suppression des fichiers localStorage Electron",
+        "electron_localstorage_files_removed": "Fichiers localStorage Electron supprimés",
+        "electron_localstorage_files_removal_error": "Erreur de suppression des fichiers localStorage Electron: {error}",
+        "removing_electron_localstorage_files_completed": "Suppression des fichiers localStorage Electron terminée"
     }
-} 
+}
