--- a/locales/nl.json
+++ b/locales/nl.json
@@ -250,5 +250,121 @@
         "domains_excluded": "Uitgesloten domeinen: {domains}",
         "failed_to_create_account": "Account aanmaken mislukt",
         "account_creation_error": "Account aanmaakfout: {error}"
+    },
+    "update": {
+        "title": "Cursor automatische update uitschakelen",
+        "disable_success": "Automatische update is uitgeschakeld",
+        "disable_failed": "Automatische update uitschakelen mislukt: {error}",
+        "press_enter": "Druk op Enter om door te gaan",
+        "start_disable": "Automatische update uitschakelen starten",
+        "killing_processes": "Processen verwijderen",
+        "processes_killed": "Processen verwijderd",
+        "removing_directory": "Map verwijderen",
+        "directory_removed": "Map verwijderd",
+        "creating_block_file": "Blokkeerbestand aanmaken",
+        "block_file_created": "Blokkeerbestand aangemaakt"
+    },
+    "updater": {
+        "checking": "Controleren op updates...",
+        "new_version_available": "Er is een nieuwe versie beschikbaar! (Huidige versie: {current}, Laatste versie: {latest})",
+        "updating": "Aan het bijwerken naar de nieuwste versie. Het programma zal automatisch herstart worden.",
+        "up_to_date": "U gebruikt de nieuwste versie.",
+        "check_failed": "Controle op updates mislukt: {error}",
+        "continue_anyway": "Doorgaan met de huidige versie...",
+        "update_confirm": "Wil je de nieuwste versie gebruiken? (Y/n)",
+        "update_skipped": "Update overgeslagen.",
+        "invalid_choice": "Ongeldige keuze. Voer 'Y' of 'n' in.",
+        "development_version": "Ontwikkelversie {current} > {latest}"
+    },
+    "totally_reset": {
+        "title": "Cursor volledig herstellen",
+        "checking_config": "Configuratiebestand controleren",
+        "config_not_found": "Configuratiebestand niet gevonden",
+        "no_permission": "Kan geen toegang krijgen tot configuratiebestand. Controleer de rechten",
+        "reading_config": "Huidige configuratie lezen",
+        "creating_backup": "Configuratie-back-up aanmaken",
+        "backup_exists": "Back-up bestand bestaat, back-up stap overgeslagen",
+        "generating_new_machine_id": "Nieuwe machine-ID genereren",
+        "saving_new_config": "Nieuwe configuratie opslaan als JSON",
+        "success": "Cursor succesvol hersteld",
+        "error": "Cursor herstellen mislukt: {error}",
+        "press_enter": "Druk op Enter om door te gaan",
+        "reset_machine_id": "Machine-ID resetten",
+        "database_connection_closed": "Databaseverbinding gesloten",
+        "database_updated_successfully": "Database succesvol bijgewerkt",
+        "connected_to_database": "Verbonden met database",
+        "updating_pair": "Sleutel-waarde paar bijwerken",
+        "db_not_found": "Databasebestand niet gevonden op: {path}",
+        "db_permission_error": "Kan geen toegang krijgen tot databasebestand. Controleer de rechten",
+        "db_connection_error": "Verbinding met database mislukt: {error}",
+        "feature_title": "Functiebeschrijving",
+        "feature_1": "Compleet verwijderen van Cursor AI-instellingen en configuratie",
+        "feature_2": "Alle cachegegevens, inclusief AI-geschiedenis en prompts",
+        "feature_3": "Machine-ID resetten om de proefperiode te omzeilen",
+        "feature_4": "Nieuwe willekeurige machine-ID maken",
+        "feature_5": "Aangepaste extensies en voorkeuren verwijderen",
+        "feature_6": "Proefperiode- en activatiegegevens resetten",
+        "feature_7": "Diepe scan voor verborgen licentie- en proefperiodebestanden",
+        "feature_8": "Beveiligde niet-Cursor-bestanden en -toepassingen behouden",
+        "feature_9": "Compatibel met Windows, macOS en Linux",
+        "disclaimer_title": "Disclaimer",
+        "disclaimer_1": "Deze tool verwijdert alle Cursor AI-instellingen,",
+        "disclaimer_2": "configuratie en cachegegevens. Deze actie is niet ongedaan te maken.",
+        "disclaimer_3": "Uw codebestanden **worden niet** beïnvloed, de tool is bedoeld om",
+        "disclaimer_4": "Alleen gericht op Cursor AI-editorbestanden en proefperiodecontrolemechanisme.",
+        "disclaimer_5": "Andere systemtoepassingen worden niet beïnvloed.",
+        "disclaimer_6": "Na het uitvoeren van deze tool moet u Cursor AI opnieuw instellen.",
+        "disclaimer_7": "U accepteert de risico's zelf.",
+        "confirm_title": "Weet u zeker dat u wilt doorgaan?",
+        "confirm_1": "Deze actie verwijdert alle Cursor AI-instellingen,",
+        "confirm_2": "configuratie en cachegegevens. Deze actie is niet ongedaan te maken.",
+        "confirm_3": "Uw codebestanden **worden niet** beïnvloed, de tool is bedoeld om",
+        "confirm_4": "Alleen gericht op Cursor AI-editorbestanden en proefperiodecontrolemechanisme.",
+        "confirm_5": "Andere systemtoepassingen worden niet beïnvloed.",
+        "confirm_6": "Na het uitvoeren van deze tool moet u Cursor AI opnieuw instellen.",
+        "confirm_7": "U accepteert de risico's zelf.",
+        "invalid_choice": "Ongeldige keuze. Voer 'Y' of 'n' in.",
+        "skipped_for_safety": "Uit veiligheidsoverwegingen overgeslagen (niet Cursor-gerelateerd): {path}",
+        "deleted": "Verwijderd: {path}",
+        "error_deleting": "Verwijdering van {path} mislukt: {error}",
+        "not_found": "Bestand niet gevonden: {path}",
+        "resetting_machine_id": "Machine-ID resetten om proefperiode te omzeilen...",
+        "created_machine_id": "Nieuwe machine-ID gemaakt: {path}",
+        "error_creating_machine_id": "Machine-ID-bestand {path} aanmaken mislukt: {error}",
+        "error_searching": "Fout bij het zoeken naar bestand {path}: {error}",
+        "created_extended_trial_info": "Nieuwe uitgebreide proefperiode-informatie gemaakt: {path}",
+        "error_creating_trial_info": "Fout bij het aanmaken van proefperiode-informatiebestand {path}: {error}",
+        "resetting_cursor_ai_editor": "Cursor AI-editor resetten... Wacht even.",
+        "reset_cancelled": "Reset geannuleerd, geen wijzigingen aangebracht.",
+        "windows_machine_id_modification_skipped": "Windows machine-ID-aanpassing overgeslagen: {error}",
+        "linux_machine_id_modification_skipped": "Linux machine-id-aanpassing overgeslagen: {error}",
+        "note_complete_machine_id_reset_may_require_running_as_administrator": "Opmerking: Compleet machine-ID-reset kan vereisen dat u als beheerder uitvoert",
+        "note_complete_system_machine_id_reset_may_require_sudo_privileges": "Opmerking: Compleet systeem machine-ID-reset kan vereisen dat u sudo-rechten hebt",
+        "windows_registry_instructions": "📝 Opmerking: Compleet machine-ID-reset kan vereisen dat u als beheerder uitvoert",
+        "windows_registry_instructions_2": "   Run 'regedit' en zoek naar de sleutels 'Cursor' of 'CursorAI' in HKEY_CURRENT_USER\\Software\\ en verwijder ze.\n",
+        "reset_log_1": "Cursor AI is volledig hersteld en heeft de proefperiode omzeild!",
+        "reset_log_2": "Start het systeem opnieuw om de wijzigingen te activeren.",
+        "reset_log_3": "U moet Cursor AI opnieuw installeren, er zou nu een nieuwe proefperiode moeten zijn.",
+        "reset_log_4": "Voor de beste resultaten raden we aan ook:",
+        "reset_log_5": "Nieuwe proefperiode registreren met een ander e-mailadres",
+        "reset_log_6": "Als mogelijk, VPN gebruiken om IP-adres te wijzigen",
+        "reset_log_7": "Voordat u naar de Cursor AI-website gaat, verwijdert u de cookies en cache van uw browser",
+        "reset_log_8": "Als het nog steeds niet werkt, probeert u Cursor AI op een andere locatie te installeren",
+        "reset_log_9": "Als u eventuele problemen ondervindt, stuurt u een probleem naar de Github Issue Tracker: https://github.com/yeongpin/cursor-free-vip/issues",
+        "unexpected_error": "Onverwachte fout: {error}",
+        "report_issue": "Rapporteer dit probleem op de Github Issue Tracker: https://github.com/yeongpin/cursor-free-vip/issues",
+        "keyboard_interrupt": "Gebruiker heeft proces afgebroken, afsluiten...",
+        "return_to_main_menu": "Terug naar hoofdmenu...",
+        "process_interrupted": "Proces afgebroken, afsluiten...",
+        "press_enter_to_return_to_main_menu": "Druk op Enter om terug te gaan naar het hoofdmenu...",
+        "removing_known": "Het verwijderen van bekende proefperiode- en licentiebestanden...",
+        "performing_deep_scan": "Een diepe scan wordt uitgevoerd om andere proefperiode- en licentiebestanden te vinden...",
+        "found_additional_potential_license_trial_files": "Er zijn {count} andere potentiële proefperiode- en licentiebestanden gevonden",
+        "checking_for_electron_localstorage_files": "Controleren op Electron localStorage-bestanden...",
+        "no_additional_license_trial_files_found_in_deep_scan": "Geen andere proefperiode- of licentiebestanden gevonden in diepe scan",
+        "removing_electron_localstorage_files": "Het verwijderen van Electron localStorage-bestanden...",
+        "electron_localstorage_files_removed": "Electron localStorage-bestanden verwijderd",
+        "electron_localstorage_files_removal_error": "Fout bij het verwijderen van Electron localStorage-bestanden: {error}",
+        "removing_electron_localstorage_files_completed": "Electron localStorage-bestanden verwijderd"
     }
-}
+} 
