--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -20,7 +20,10 @@
         "en": "English",
         "zh_cn": "简体中文",
         "zh_tw": "繁體中文",
-        "vi": "Vietnamese"
+        "vi": "Vietnamese",
+        "nl": "Dutch",
+        "de": "German",
+        "fr": "French"
     },
     "quit_cursor": {
         "start": "開始退出 Cursor",
